// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notice > matches the snapshot for tone='error' 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; padding: 10px 14px; border-radius: 8px; background: color-mix(in srgb, var(--c-oxblood-hi, #d27b6f) 8.2%, transparent); border: 1px solid color-mix(in srgb, var(--c-oxblood-hi, #d27b6f) 26.7%, transparent); color: var(--c-oxblood-hi, #d27b6f); font-family: "DM Sans", -apple-system, system-ui, sans-serif; font-size: calc(15px * var(--cave-font-scale, 1)); line-height: 1.45;"
>
  <span
    style="flex-shrink: 0; display: inline-flex;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.7"
      viewBox="0 0 24 24"
      width="14"
    >
      <path
        d="M6 6l12 12M18 6L6 18"
      />
    </svg>
  </span>
  <span
    style="flex: 1 1 0%; min-width: 0px;"
  >
    error message
  </span>
</div>
`;

exports[`Notice > matches the snapshot for tone='info' 1`] = `
<div
  role="status"
  style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; padding: 10px 14px; border-radius: 8px; background: color-mix(in srgb, var(--c-brass-hi, #ecc789) 8.2%, transparent); border: 1px solid color-mix(in srgb, var(--c-brass-hi, #ecc789) 26.7%, transparent); color: var(--c-brass-hi, #ecc789); font-family: "DM Sans", -apple-system, system-ui, sans-serif; font-size: calc(15px * var(--cave-font-scale, 1)); line-height: 1.45;"
>
  <span
    style="flex-shrink: 0; display: inline-flex;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.7"
      viewBox="0 0 24 24"
      width="14"
    >
      <g>
        <circle
          cx="5"
          cy="12"
          fill="currentColor"
          r="1.5"
        />
        <circle
          cx="12"
          cy="12"
          fill="currentColor"
          r="1.5"
        />
        <circle
          cx="19"
          cy="12"
          fill="currentColor"
          r="1.5"
        />
      </g>
    </svg>
  </span>
  <span
    style="flex: 1 1 0%; min-width: 0px;"
  >
    info message
  </span>
</div>
`;

exports[`Notice > matches the snapshot for tone='success' 1`] = `
<div
  role="status"
  style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; padding: 10px 14px; border-radius: 8px; background: color-mix(in srgb, var(--c-sage, #8fbf9c) 8.2%, transparent); border: 1px solid color-mix(in srgb, var(--c-sage, #8fbf9c) 26.7%, transparent); color: var(--c-sage, #8fbf9c); font-family: "DM Sans", -apple-system, system-ui, sans-serif; font-size: calc(15px * var(--cave-font-scale, 1)); line-height: 1.45;"
>
  <span
    style="flex-shrink: 0; display: inline-flex;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.7"
      viewBox="0 0 24 24"
      width="14"
    >
      <path
        d="M5 12l5 5 9-10"
      />
    </svg>
  </span>
  <span
    style="flex: 1 1 0%; min-width: 0px;"
  >
    success message
  </span>
</div>
`;

exports[`Notice > matches the snapshot for tone='warn' 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; padding: 10px 14px; border-radius: 8px; background: color-mix(in srgb, var(--c-amber, #e89556) 8.2%, transparent); border: 1px solid color-mix(in srgb, var(--c-amber, #e89556) 26.7%, transparent); color: var(--c-amber, #e89556); font-family: "DM Sans", -apple-system, system-ui, sans-serif; font-size: calc(15px * var(--cave-font-scale, 1)); line-height: 1.45;"
>
  <span
    style="flex-shrink: 0; display: inline-flex;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.7"
      viewBox="0 0 24 24"
      width="14"
    >
      <path
        d="M12 2 22 12 12 22 2 12z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    style="flex: 1 1 0%; min-width: 0px;"
  >
    warning message
  </span>
</div>
`;

exports[`Notice > matches the snapshot when an action slot is supplied 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; padding: 10px 14px; border-radius: 8px; background: color-mix(in srgb, var(--c-amber, #e89556) 8.2%, transparent); border: 1px solid color-mix(in srgb, var(--c-amber, #e89556) 26.7%, transparent); color: var(--c-amber, #e89556); font-family: "DM Sans", -apple-system, system-ui, sans-serif; font-size: calc(15px * var(--cave-font-scale, 1)); line-height: 1.45;"
>
  <span
    style="flex-shrink: 0; display: inline-flex;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.7"
      viewBox="0 0 24 24"
      width="14"
    >
      <path
        d="M12 2 22 12 12 22 2 12z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    style="flex: 1 1 0%; min-width: 0px;"
  >
    Drive offline
  </span>
  <span
    style="flex-shrink: 0;"
  >
    <button>
      Retry
    </button>
  </span>
</div>
`;
